feat(Content): :sparkles: Skills + Summary Complete

--- a/cv/procurifyJobSeniorBackendEngineerPlatformIntegrations/skills.tex
+++ b/cv/procurifyJobSeniorBackendEngineerPlatformIntegrations/skills.tex
@@ -1,9 +1,9 @@
 \cvsection{Skills}
 
 \begin{cvskills}
-	\cvskill{Backend \& APIs}{Python, Flask, Django, RESTful API Design, API-First Architecture, Service Integration}
-	\cvskill{Cloud \& Infrastructure}{Azure (AWS equivalent), Docker, Linux Administration, CI/CD Pipelines, Infrastructure as Code}
-	\cvskill{Integration \& Data}{Multi-system Integration, Entity Resolution, ETL/ELT Pipelines, Legacy System Modernization}
-	\cvskill{Architecture}{Microservices Design, Distributed Systems, Scalable Platform Architecture, Performance Optimization}
-	\cvskill{Leadership}{Team Leadership (5+ engineers), Technical Mentorship, Code Reviews, Agile/Scrum Methodologies}
+	\cvskill{Backend \& API Development}{Python, FastAPI, Flask, Django, RESTful APIs, Microservices Architecture}
+	\cvskill{Integration \& Data Pipelines}{Third-party API Integration, ETL/ELT Pipelines, DBT, Azure Data Factory, Entity Resolution}
+	\cvskill{Cloud \& Infrastructure}{Azure, Docker, CI/CD Pipelines, Linux Administration, Terraform (IaC), Shell Scripting}
+	\cvskill{Architecture \& Design}{API-first Design, Distributed Systems, Data Modeling, Performance Optimization, Scalable Services}
+	\cvskill{Leadership \& Mentorship}{Team Leadership, Code Reviews, Technical Mentoring, Cross-functional Collaboration, Agile}
 \end{cvskills}
