--- a/cv/procurifyJobSeniorBackendEngineerPlatformIntegrations/summary.tex
+++ b/cv/procurifyJobSeniorBackendEngineerPlatformIntegrations/summary.tex
@@ -1,5 +1,5 @@
 \cvsection{Summary}
 
 \begin{cvparagraph}
-Senior Backend Engineer with 7+ years building scalable Python APIs and integration platforms, delivering critical business value including \$300K+ annual cost savings through system modernization. Expert in designing and implementing RESTful APIs using Flask/Django, with proven experience building robust data integration services connecting multiple enterprise systems. Led development of internal platform services handling entity resolution and data synchronization across legacy and modern systems. Strong track record leading engineering teams of 5+, mentoring junior developers, and architecting cloud-native solutions on Azure with direct applicability to AWS environments. Passionate about API-first design, building resilient integrations, and creating scalable backend services that enable seamless data flow across complex enterprise ecosystems.
+Senior Backend Engineer with 7+ years building scalable APIs and integration platforms that connect critical business systems, eliminating \$300K+ in annual licensing costs through modern Python-based architectures. Deep expertise in FastAPI, RESTful services, and third-party API integrations, with proven success designing resilient data pipelines processing millions of records for government decision-makers. Experienced technical leader mentoring engineering teams while architecting cloud-native solutions on Azure, implementing CI/CD pipelines, and transforming legacy systems into maintainable, API-first platforms.
 \end{cvparagraph}
