--- a/cv/procurifyJobSeniorBackendEngineerPlatformIntegrations/cover_letter.tex
+++ b/cv/procurifyJobSeniorBackendEngineerPlatformIntegrations/cover_letter.tex
@@ -1,24 +1,26 @@
 \storeletterdate{\today}
-\storerecipient{Poka}{Analytics Team}
-\storelettertitle{Application for Senior Data Developer Position}
-\storeletteropening{Dear Hiring Manager,}
+\storerecipient{Procurify}{Engineering Team}
+\storelettertitle{Application for Senior Backend Engineer, Platform \& Integrations}
+\storeletteropening{Dear Procurify Hiring Team,}
 
 \begin{storedcvletter}{
-I am writing to express my strong interest in the Senior Data Developer position at Poka. Your mission to bridge the gap between frontline workers and smart factory technology particularly resonates with me. After building data solutions that support critical government operations for seven years, I am drawn to the opportunity to create direct, measurable impact in manufacturing environments where data insights drive tangible improvements.
+I am excited to apply for the Senior Backend Engineer position on your Platform \& Integrations team. With 7+ years of experience building scalable APIs and integration platforms for critical government systems, I'm drawn to Procurify's mission to modernize spend management through robust, API-first architecture. Your focus on creating seamless connections to accounting and ERP systems aligns perfectly with my expertise in building resilient data pipelines and third-party integrations.
 
-My experience aligns closely with your technical requirements. At the Ministry of the Attorney General, I architected and optimized DBT pipelines that achieved over \$300K in annual cost savings through strategic implementation of incremental builds and performance profiling. Managing data from 150+ court locations with stringent compliance requirements has prepared me well for the complexity and scale of manufacturing data environments. This work required not just technical expertise, but a deep understanding of how to build reliable, scalable systems that stakeholders can trust for critical decisions.
+In my current role as a Data Engineer with a Platform and Integration focus at the Ontario Public Service, I've developed the exact capabilities you're seeking. I recently architected and implemented a Python-based data platform that eliminated over \$300K in annual licensing costs while processing millions of rows of critical court data. This experience translates directly to your need for scalable, observable systems capable of handling high-volume data from thousands of customers.
 
-Your technology stack aligns well with my expertise. I have extensive experience building dimensional models using Star and Snowflake schemas, developing Flask APIs for data processing and entity resolution, and implementing Azure cloud infrastructure including Databricks and Data Factory. Beyond the technical implementation, I have consistently applied software engineering best practices—establishing CI/CD pipelines, automated testing frameworks, and rigorous code review processes. This foundation ensures that data solutions are not just functional, but maintainable and scalable as organizational needs evolve.
+My hands-on experience with Flask and RESTful API design matches your technical requirements well. I've built API-based data cleaning tools that transformed weeks of manual processing into automated workflows—the kind of seamless integration experience that drives customer satisfaction. While my cloud experience has been primarily with Azure, the core principles of containerization (Docker), CI/CD pipelines, and infrastructure as code (Terraform) apply directly to your AWS environment.
 
-In my role at Treasury Board Secretariat, I led a team of five engineers in developing enterprise data solutions that supported multi-million dollar government spending decisions. This experience taught me to effectively translate complex business requirements into robust technical solutions while managing diverse stakeholder expectations and project timelines. I understand the importance of clear communication across technical and non-technical teams—a skill that would be valuable when collaborating with your product managers and cross-functional teams.
+Third-party API integrations have been central to my work. I've successfully integrated multiple data sources through Python and SQL, creating automated document generation systems that process 7,000+ customized reports. I've also eliminated high-risk legacy systems by building modern, maintainable replacements—experience that will be valuable as you expand your ecosystem of accounting and ERP integrations. My work with entity resolution algorithms and data transformations has given me a solid understanding of the challenges that arise when connecting disparate systems.
 
-While my background is in government data systems, I recognize strong parallels with manufacturing challenges: integrating heterogeneous data sources, ensuring real-time data quality, optimizing performance under constraints, and delivering actionable insights for operational decisions. The opportunity to apply these skills to near real-time manufacturing pipelines represents an exciting technical challenge. Additionally, I am eager to expand my work with AI-driven use cases, building on my experience with entity resolution algorithms to explore advanced analytics applications in your platform.
+From an architectural perspective, I focus on making pragmatic decisions that balance immediate needs with long-term scalability. I've implemented protected main branches with automated testing, designed data warehouses supporting reporting across Ontario's entire court system, and consistently built the infrastructure that keeps complex organizations running smoothly. This approach ensures systems remain maintainable and scalable as they evolve.
 
-The mentoring component of this role particularly appeals to me. Throughout my career, I have found great satisfaction in guiding junior engineers, sharing technical knowledge, and helping teams adopt best practices. This collaborative approach to growth aligns with my belief that strong teams are built through knowledge sharing and continuous learning.
+As a team lead, I've mentored 5 engineers through complex technical challenges while maintaining delivery standards during organizational changes. I believe strongly in thorough code reviews, collaborative design sessions, and fostering engineering excellence. My goal is always to help elevate the capabilities of the entire team through knowledge sharing and practical guidance.
 
-I am confident that my combination of technical expertise in data engineering, proven ability to deliver measurable business value, and experience leading cross-functional teams would make me a valuable addition to Poka's Analytics team. I would welcome the opportunity to discuss how my skills and experience can contribute to advancing your data platform and supporting your mission of empowering frontline manufacturing workers.
+Procurify's recent Series C funding and commitment to AI-enhanced procure-to-pay experiences represents an exciting growth opportunity. Your remote-first culture and focus on personal development resonate with me, and I'm particularly interested in your API-first strategy and the opportunity to work with modern frameworks like FastAPI at scale. Building integrations that directly impact how organizations manage their spending is exactly the type of meaningful technical challenge I seek.
+
+I would welcome the opportunity to bring my expertise in building resilient backend services and scalable integrations to help Procurify strengthen its position as a leader in modern spend management. Thank you for considering my application. I look forward to discussing how my experience eliminating costly legacy systems and building modern API platforms can contribute to your Platform team's success.
 }
 \end{storedcvletter}
 
-\storeletterclosing{Sincerely,}
+\storeletterclosing{Best regards,}
 \storeletterenclosure[Attached]{Resume}
